--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -163,6 +163,10 @@ p {
 .marginTop15{
     margin-top: 15px;
 }
+.listed-bold-span{
+    font-size: 10px !important;
+    font-weight: 700 !important;
+}
 .padding2{
     padding: 2%;
 }
@@ -237,6 +241,9 @@ padding-bottom: 10%;
 }
 .padding7{
     padding: 7%;
+}
+.padding3{
+    padding: 3%;
 }
 
 .sidebar-button {
@@ -879,8 +886,12 @@ padding-bottom: 10%;
 
 .mls-property-image {
     position: relative;
-    height: 250px;
+    height: 245px;
     overflow: hidden;
+}
+.mls-property-image img{
+    width: 100%;
+    height: 235px!important;
 }
 
 .property-image {
@@ -1016,7 +1027,8 @@ padding-bottom: 10%;
 }
 
 .mls-property-info {
-    padding: 2px;
+    padding: 3px;
+    min-height: 25%;
 }
 
 .property-info h3 {
@@ -1068,10 +1080,10 @@ padding-bottom: 10%;
 .property-location {
     display: flex;
     align-items: center;
-    gap: 22px;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
-    letter-spacing: -3%;
+    font-style: italic;
+    padding-top: 3px;
 }
 
 .property-location svg {
@@ -1108,7 +1120,7 @@ padding-bottom: 10%;
 
 .neighborhood-card {
     position: relative;
-    height: 450px;
+    height: 300px;
     border-radius: 25px;
     overflow: hidden;
     cursor: pointer;
@@ -1924,9 +1936,14 @@ padding-bottom: 10%;
     letter-spacing: -0.9px;
     margin-top: 10px !important;
 }
+.mls-span{
+    font-size: 9pt !important;
+    font-weight: 400 !important;
+}
 .mlscardheading{
-    font-size: 20px !important;
+    font-size: 18pt !important;
     line-height:1.2 ;
+    font-weight: 700 !important;
 }
 .date-div {
     display: inline-flex;
