--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -146,6 +146,8 @@ p {
     background-color: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(10px);
     padding: 20px 0;
+        border-bottom: 1px solid #504d4d;
+
 }
 
 .main-content-p {
@@ -906,6 +908,13 @@ p {
     overflow: hidden;
     transition: transform 0.3s ease;
 }
+.property-modal-card {
+    background-color: #171717;
+    border: 2px solid #4F4F4F;
+    /* border-radius: 30px; */
+    overflow: hidden;
+    transition: transform 0.3s ease;
+}
 
 .mls-property-card {
     background-color: black !important;
@@ -921,6 +930,15 @@ p {
     position: relative;
     height: 245px;
     overflow: hidden;
+}
+.mls-modal-property-image {
+    position: relative;
+    height: 150px;
+    overflow: hidden;
+}
+.mls-modal-property-image img {
+    width: 100%;
+    height: 145px !important;
 }
 
 .mls-property-image img {
@@ -1017,7 +1035,9 @@ p {
     font-weight: 400;
     letter-spacing: -3%;
 }
-
+.black-div{
+    background-color: black;
+}
 .prop-badge {
     background-color: #ffffff;
     color: #000000;
@@ -2248,9 +2268,9 @@ p {
     display: flex;
     justify-content: center;
     text-align: center;
-    margin-top: 120px;
+    margin-top: 15px;
     padding-top: 0px;
-    min-height: 30vh;
+    min-height: 16vh;
 }
 
 .justify-center-item {
@@ -2421,7 +2441,9 @@ p {
 .about-story .container {
     max-width: 1000px;
 }
-
+.map-container{
+    height:600px !important;
+}
 .about-story h2 {
     color: #FFF;
     margin-bottom: 20px;
