--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@
 
 /* If you want to style the select elements within minwidth300 */
 .minwidth300 select {
-    background-color: #1c1d1d; 
+    background-color: #000000; 
     color: #ffffff;
 }
 
