--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -21,6 +21,9 @@ body {
     background-color: #000000;
     overflow-x: hidden;
 }
+.pd50{
+    padding-top: 50px!important;
+}
 
 .container {
     /* max-width: 1920px; */
@@ -28,6 +31,8 @@ body {
     justify-self: center;
     margin: 0 0px;
     padding: -1px 20px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 /* Typography */
@@ -146,7 +151,9 @@ p {
     background-color: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(10px);
     padding: 20px 0;
-        border-bottom: 1px solid #504d4d;
+    border-bottom: 1px solid #504d4d;
+    margin-right: 18px;
+    margin-left: 18px;
 
 }
 
@@ -228,6 +235,7 @@ p {
 .marginTop {
     margin-top: 3%;
 }
+
 .marginTop6 {
     margin-top: 6% !important;
 }
@@ -328,7 +336,9 @@ p {
     /* 106.667% */
     letter-spacing: -0.9px;
 }
-
+.sell-btn{
+    width: 200px;
+}
 .search-span {
     color: #515151;
     font-family: Helvetica;
@@ -339,7 +349,12 @@ p {
     /* 128% */
     letter-spacing: -0.75px;
 }
-
+.alr{
+    float: right;
+}
+.mrgn75{
+    margin-right: 75px;
+}
 .search-button {
     color: #000;
     font-family: Helvetica;
@@ -398,6 +413,7 @@ p {
     text-align: center;
     padding-top: 10px;
 }
+
 .hero-neighborhood {
     height: 310px;
     background-size: cover;
@@ -447,7 +463,7 @@ p {
     background-color: #ffffff;
     border-radius: 10px;
     padding: 14px 12px 15px 26px;
-    width: 76%;
+    width: 85%;
     margin: 0 auto;
 }
 
@@ -456,7 +472,7 @@ p {
 }
 
 .search-tab {
- background-color: #EDB75E;
+    background-color: #EDB75E;
     color: #000000;
     border: none;
     padding: 20px 30px 18px 30px;
@@ -630,7 +646,7 @@ p {
 
 /* About Section */
 .about {
-    padding: 100px 0;
+    padding: 0px 0;
     background-color: transparent;
 }
 
@@ -638,7 +654,7 @@ p {
     display: flex;
     align-items: center;
     gap: 200px;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
 }
 
 .about-text {
@@ -648,6 +664,44 @@ p {
 
 .about-text h2 {
     margin-bottom: 44px;
+}
+
+.search-pl-pr {
+    padding-left: 2px !important;
+    padding-right: 2px !important;
+
+}
+
+.justify-left {
+    justify-content: left !important;
+}
+
+.search-border {
+    border-color: #cbcbcb !important;
+}
+
+.search-tab-btn {
+    margin-left: 1%;
+    margin-right: 1%;
+
+}
+
+.sell-div {
+    width: 80% !important;
+    padding: 14px 12px 15px 26px;
+    margin: 0 auto;
+}
+
+.btn-w {
+    width: 40% !important;
+}
+
+.search-tab-div {
+    background-color: transparent;
+
+    padding: 14px 12px 15px 26px;
+    width: 95%;
+    margin: 0 auto;
 }
 
 .about-image {
@@ -660,17 +714,17 @@ p {
     width: auto;
     height: 350px;
     border-radius: 25px;
-    padding-left: 170px;
+    padding-left: 20px;
 }
 
 .advisor-card {
     position: absolute;
-    bottom: -40px;
+    bottom: 10px;
     right: 9px;
     background-color: transparent;
     backdrop-filter: blur(10px);
     border-radius: 15px;
-    max-width: 648px;
+    max-width: 750px;
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
 }
 
@@ -699,7 +753,6 @@ p {
     font-size: 16px;
     line-height: 1.533;
     letter-spacing: -3%;
-    padding-right: 50px;
     text-align: justify;
     margin-bottom: 27px;
 }
@@ -728,10 +781,8 @@ p {
 .home-worth {
     padding: 250px 0;
     padding-left: 0px;
-    margin-left: 87px;
     padding-right: 250px;
     padding-bottom: 26px;
-    margin-right: 69px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -776,7 +827,6 @@ p {
 .section-header {
     text-align: left;
     margin-bottom: 100px;
-    margin-left: 79px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -797,9 +847,9 @@ p {
 }
 
 .section-header p {
-       max-width: 600px;
+    max-width: 600px;
     font-size: 18px !important;
-    margin-right: 40px;
+    margin-right: -6px;
     margin-top: 28px;
 }
 
@@ -833,7 +883,6 @@ p {
     display: flex;
     gap: 12px;
     margin-bottom: 44px;
-    padding-left: 40px;
 }
 
 .filter-btn {
@@ -867,12 +916,14 @@ p {
     padding-right: 20px;
     margin-bottom: 100px;
 }
+
 .properties-grid-home {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 35px;
     margin-bottom: 100px;
 }
+
 .mls-properties-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -920,6 +971,7 @@ p {
     overflow: hidden;
     transition: transform 0.3s ease;
 }
+
 .property-modal-card {
     background-color: #171717;
     border: 2px solid #4F4F4F;
@@ -943,11 +995,13 @@ p {
     height: 245px;
     overflow: hidden;
 }
+
 .mls-modal-property-image {
     position: relative;
     height: 150px;
     overflow: hidden;
 }
+
 .mls-modal-property-image img {
     width: 100%;
     height: 145px !important;
@@ -960,7 +1014,7 @@ p {
 
 .property-image {
     position: relative;
-    height: 180px;
+    height: 250px;
     overflow: hidden;
 }
 
@@ -1047,9 +1101,11 @@ p {
     font-weight: 400;
     letter-spacing: -3%;
 }
-.black-div{
+
+.black-div {
     background-color: black;
 }
+
 .prop-badge {
     background-color: #ffffff;
     color: #000000;
@@ -1148,7 +1204,6 @@ p {
     align-items: center;
     font-size: 14px;
     font-weight: 400;
-    font-style: italic;
     padding-top: 3px;
 }
 
@@ -1214,14 +1269,15 @@ p {
     font-weight: 400;
     line-height: 0.92;
     letter-spacing: -1%;
-    margin-bottom: 22px;
+    margin-bottom: 10px;
 }
 
 .neighborhood-info p {
-    font-size: 15px;
+   font-size: 15px;
     font-weight: 400;
-    line-height: 0.873;
-    letter-spacing: -1%;
+    line-height: 1.31;
+    letter-spacing: 1%;
+    padding-right: 40px;
     padding-bottom: 10px;
 
 }
@@ -1445,7 +1501,7 @@ p {
 }
 
 .read-more-btn {
-  background-color: transparent;
+    background-color: transparent;
     color: #EDB75E;
     border: 1px solid #EDB75E;
     padding: 5px 13px;
@@ -1513,7 +1569,7 @@ p {
 .form-group {
     display: flex;
     background-color: #ffffff;
-    border-radius:8px;
+    border-radius: 8px;
     overflow: hidden;
 }
 
@@ -1565,6 +1621,7 @@ p {
     /* grid-template-columns: 1fr 1fr 1fr 1fr; */
     gap: 80px;
     margin-bottom: 40px;
+    margin-left: 24px;
 }
 
 .footer-brand {
@@ -1587,6 +1644,8 @@ p {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 80px;
+    margin-right: 24px;
+
 }
 
 .footer-column h4 {
@@ -1631,8 +1690,8 @@ p {
 }
 
 .social-link {
-    width: 55px;
-    height: 55px;
+    width: 45px;
+    height: 45px;
     border: 1px solid #ffffff;
     border-radius: 50%;
     display: flex;
@@ -2016,12 +2075,15 @@ p {
     font-size: 9pt !important;
     font-weight: 400 !important;
 }
-.mls-searchmenu-yellow{
+
+.mls-searchmenu-yellow {
     background: #edb75e;
 }
+
 .hovertext:hover {
     color: #000;
 }
+
 .mlscardheading {
     font-size: 14pt !important;
     line-height: 1.2;
@@ -2151,6 +2213,7 @@ p {
     margin-top: 2%;
 }
 
+
 .single-blog-listing-head {
     font-family: Helvetica;
     font-weight: 400;
@@ -2190,7 +2253,7 @@ p {
 }
 
 .footer-facebook-icon {
-    width: 12px;
+    width: 11px!important;
 }
 
 .footer-icon {
@@ -2272,35 +2335,58 @@ p {
 .yellow-text {
     color: #EDB75E !important;
 }
-.no-p-r{
+
+.no-p-r {
     padding-right: 0px;
 }
+
 .marginLeft_10 {
     margin: -10px;
-    
+
 }
-.newsletter-email{
-    padding:10px 20px !important;
+
+.newsletter-email {
+    padding: 10px 20px !important;
 }
+
 .marginLeft-15 {
     margin-left: 15px;
-    
+
 }
-.login-input-padding{
+
+.login-input-padding {
     padding: 10px 15px 10px 15px !important;
 }
-.search-padding{
-    padding: 5px 0px 5px 3px !important;
+
+.search-padding {
+    padding: 6px !important;
 }
+
 .mt-4 {
     margin-top: 4px !important;
 }
+
 .ml-4 {
     margin-left: 4px !important;
 }
+
 .mr-4 {
-    margin-right: 2px !important;
+    margin-right: 4px !important;
 }
+
+.mrgn54 {
+    margin-left: 54px;
+}
+
+.mr6 {
+    margin-left: 6px;
+}
+
+.pdl24 {
+    padding-left: 24px !important;
+
+}
+
 .mls-page {
     background-size: cover;
     background-position: center;
@@ -2309,18 +2395,21 @@ p {
     display: flex;
     justify-content: center;
     text-align: center;
-    margin-top: 15px;
+    margin-top: 30px;
     padding-top: 0px;
     min-height: 14vh;
-    margin-left: 30px;
-    margin-right: 32px;
+    margin-left: 53px;
+    margin-right: 53px;
 }
-.mrgn30{
-        margin-left: 30px!important;
+
+.mrgn30 {
+    margin-left: 30px !important;
 }
-.mrgn10{
+
+.mrgn10 {
     margin-right: 10px !important;
 }
+
 .justify-center-item {
     justify-content: flex-end;
 }
@@ -2381,7 +2470,7 @@ p {
     border-radius: 8px;
     border: 1px solid #242322;
     font-size: 14px;
-    padding: 5px 15px 5px 15px;
+    padding: 10px;
 }
 
 /* .mls-searchmenu select,
@@ -2489,9 +2578,11 @@ p {
 .about-story .container {
     max-width: 1000px;
 }
-.map-container{
-    height:600px !important;
+
+.map-container {
+    height: 600px !important;
 }
+
 .about-story h2 {
     color: #FFF;
     margin-bottom: 20px;
@@ -3085,7 +3176,7 @@ p {
 
 .social-links img {
     width: 15px;
-    height: 18px;
+    height: 15px;
 }
 
 @media(max-width: 768px) {
@@ -3100,7 +3191,8 @@ p {
         grid-template-columns: 1fr;
     }
 }
-.properlistinmap{
+
+.properlistinmap {
     height: 1000px;
     overflow: scroll;
 }
